add details to api
